# nub

./: .dockerignore  .gitignore  .npmrc  .worktreeinclude  AGENTS.md  Cargo.toml  Makefile  README.md  external-tools.json  install.ps1  install.sh  package-lock.json  package.json
.cargo/: config.toml
.claude/: settings.json
.claude/hooks/: fray-notify-surface.mjs
.githooks/: commit-msg
.github/: renovate.json  subagent-guide.md
.github/scripts/: gen-homebrew-formula.sh
.github/workflows/: aube-parity.yml  ci.yml  commit-hygiene.yml  daily-driver.yml  docker-smoke.yml  docker.yml  download-stats.yml  flake-fifty-windows-probe.yml  launcher.yml  lockfile-roundtrip.yml  native-deps.yml  nix.yml  node-flag-drift.yml  node-matrix.yml  pnpm-conformance.yml  pullfrog.yml  release.yml  sandbox-macos-writeconfine.yml  sandbox-win-probes.yml  test-install.yml  trunk-red.yml  verify-install.yml  winget-validate.yml  wpt-worker.yml  zizmor.yml
crates/nub-cache-key/: Cargo.toml
crates/nub-cache-key/src/: lib.rs
crates/nub-cli/: Cargo.toml
crates/nub-core/: Cargo.toml
crates/nub-native/: Cargo.toml  Cross.toml
npm/nub/: package.json
npm/nub-darwin-arm64/: package.json
npm/nub-darwin-x64/: package.json
npm/nub-linux-arm64-musl/: package.json
runtime/: html-rewriter.mjs  polyfills.cjs  preload-common.cjs  preload.cjs  preload.mjs  version.mjs  worker-blob-url.cjs  worker-polyfill.mjs
scripts/: fray-notify.mjs  qos-global.sh  rust-build.sh  rustc-qos.sh  statusline-decisions.sh
tools/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  taze.config.mts
(+189 files in other folders)
