# The transpile-cache key derivation, factored out of `nub-native` so it is unit
# testable. `nub-native` is a `cdylib` N-API addon: its `napi_*` symbols are
# resolved by the Node host at dlopen, so a `cargo test` harness for that crate
# cannot link (it has `test = false` for that reason — see its Cargo.toml). The
# key-derivation is pure (blake3 over a fixed preimage) with no napi dependency,
# so it lives here where it CAN be tested on every platform, and `nub-native`
# calls into it. Keep this crate napi-free.
[package]
name = "nub-cache-key"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true

[lints]
workspace = true
